add basic offensive kick

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,6 @@ file(
 
 # copy other files to the binary direcotry
 file(COPY
-  formations-dt formations-keeper formations-taker player.conf coach.conf start-debug.sh start-offline.sh
+  player.conf coach.conf start-debug.sh start-offline.sh
   DESTINATION ${PROJECT_BINARY_DIR}/bin
   )
