--- a/src/start.sh.in
+++ b/src/start.sh.in
@@ -23,7 +23,7 @@ DIR=`dirname $0`
 
 player="${DIR}/sample_player"
 coach="${DIR}/sample_coach"
-teamname="HELIOS_base"
+teamname="STARTER_base"
 host="localhost"
 port=6000
 coach_port=""
